--- a/css/style.css
+++ b/css/style.css
@@ -683,3 +683,32 @@ body.dark-mode .carte-actu {
   color: #0077cc;
   font-weight: bold;
 }
+.signature {
+  margin-top: 15px;
+  text-align: right;
+  font-weight: bold;
+  color: #0077cc;
+}
+.carte-equipe {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 25px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+.carte-residence {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 25px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+.residence-card a {
+  display: block;
+  margin: 0 15px 15px 15px;
+  text-decoration: none;
+  color: #0077cc;
+  font-weight: bold;
+}
